--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "deploy": "npm run build && wrangler pages deploy",
     "cf-typegen": "wrangler types",
     "format:check": "prettier --check .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "nuxt": "^3.16.1",
@@ -20,8 +22,11 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250320.0",
+    "@nuxt/eslint": "^1.2.0",
+    "eslint": "^9.22.0",
     "nitro-cloudflare-dev": "^0.2.2",
     "prettier": "3.5.3",
+    "typescript": "^5.8.2",
     "wrangler": "^4.3.0"
   }
 }
