--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
+  // https://developers.cloudflare.com/workers/languages/typescript/#generate-types
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "types": ["@cloudflare/workers-types/2023-07-01"]
+    "types": ["worker-configuration.d.ts"] // TODO: Check this in case of errors
   }
 }
