--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:fix": "eslint . --fix --ignore-pattern 'worker-configuration.d.ts'"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^9.3.3",
     "nuxt": "^3.16.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
