feat: Add ui module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,16 @@
     "source.fixAll.eslint": "always"
   },
   "editor.formatOnSave": true,
+  "editor.quickSuggestions": {
+    "strings": "on"
+  },
   "eslint.validate": ["javascript", "typescript", "vue"],
   "eslint.useFlatConfig": true,
   "files.associations": {
+    "*.css": "tailwindcss",
     "wrangler.json": "jsonc"
   },
-  "files.autoSave": "onFocusChange"
+  "files.autoSave": "onFocusChange",
+  "tailwindCSS.classAttributes": ["class", "ui"],
+  "tailwindCSS.experimental.classRegex": [["ui:\\s*{([^)]*)\\s*}", "(?:'|\"|`)([^']*)(?:'|\"|`)"]]
 }
