--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint:fix": "eslint . --fix --ignore-pattern 'worker-configuration.d.ts'"
   },
   "dependencies": {
+    "@nuxt/ui": "^3.0.1",
     "@nuxtjs/i18n": "^9.3.3",
     "nuxt": "^3.16.1",
     "vue": "^3.5.13",
