--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@nuxtjs/i18n": "^9.3.3",
     "nuxt": "^3.16.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.2.0",
