test: Add tests for redirections

--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.2.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.11",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.22.0",
     "nitro-cloudflare-dev": "^0.2.2",
     "prettier": "3.5.3",
+    "supertest": "^7.1.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
+    "vitest": "^3.0.9",
     "wrangler": "^4.3.0"
   }
 }
