--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "afonso-web",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,8 +11,8 @@
     "generate": "nuxt generate",
     "preview": "npm run build && wrangler pages dev --ip 0.0.0.0",
     "postinstall": "nuxt prepare",
-    "deploy:preview": "npm run build && wrangler pages deploy --branch preview --commit-dirty",
-    "deploy:production": "npm run build && wrangler pages deploy --branch main",
+    "deploy:preview": "npm run build && wrangler pages deploy --branch=preview --commit-dirty",
+    "deploy:production": "npm run build && wrangler pages deploy --branch=production",
     "cf-typegen": "wrangler types",
     "format:check": "prettier --check .",
     "format": "prettier --write .",
