--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,15 +44,16 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: deploy --env=production
+          command: deploy --env=production --name=afonso-dev
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
 
       # Deploy: Preview (manual only)
-      # - name: Deploy to Cloudflare (Preview)
-      #   if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'preview' }}
-      #   uses: cloudflare/wrangler-action@v3.14.1
-      #   with:
-      #     apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      #     accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      #     command: versions upload --env=preview --preview-alias=preview
-      #     gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy to Cloudflare (Preview)
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'preview' }}
+        uses: cloudflare/wrangler-action@v3.14.1
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          # TODO: Deploying in a different project due to a bug
+          command: deploy --env=preview --name=preview-afonso-dev
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
