--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "generate": "nuxt generate",
     "preview": "npm run build && wrangler dev --ip 0.0.0.0",
     "postinstall": "nuxt prepare",
-    "deploy:preview": "echo 'BUG' # npm run build && wrangler versions upload --env=preview --preview-alias=preview",
-    "deploy:production": "npm run build:resume && npm run build && wrangler deploy --env=production",
+    "deploy:preview": "npm run build:resume && npm run build && wrangler deploy --env=preview --name=preview-afonso-dev",
+    "deploy:production": "npm run build:resume && npm run build && wrangler deploy --env=production --name=afonso-dev",
     "cf-typegen": "wrangler types",
     "format:check": "prettier --check .",
     "format": "prettier --write .",
