--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build:resume": "tsx bin/resume-import.ts && bash bin/resume-html.sh",
     "dev": "nuxt dev",
     "dev:public": "nuxt dev --public",
-    "generate": "nuxt generate",
-    "preview": "npm run build && wrangler dev --ip 0.0.0.0",
+    "preview": "npm run build:resume && npm run build && wrangler dev --ip 0.0.0.0",
     "postinstall": "nuxt prepare",
     "deploy:preview": "npm run build:resume && npm run build && wrangler deploy --env=preview --name=preview-afonso-dev",
     "deploy:production": "npm run build:resume && npm run build && wrangler deploy --env=production --name=afonso-dev",
