--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,10 +37,23 @@ jobs:
       - name: Build Project
         run: npm run build
 
-      - name: Deploy to Cloudflare
-        uses: cloudflare/wrangler-action@v3
+      # Deploy: Production (manual or push)
+      - name: Deploy to Cloudflare (Production)
+        if: ${{ github.event_name == 'push' || github.event.inputs.environment == 'production' }}
+        uses: cloudflare/wrangler-action@v3.14.1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy --branch=${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && 'production' || github.event_name == 'workflow_dispatch' && github.event.inputs.environment || 'preview' }} --commit-dirty=true
+          command: deploy --env=production --name=afonso-dev
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+
+      # Deploy: Preview (manual only)
+      - name: Deploy to Cloudflare (Preview)
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'preview' }}
+        uses: cloudflare/wrangler-action@v3.14.1
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          # TODO: Deploying in a different project due to a bug
+          command: deploy --env=preview --name=preview-afonso-dev
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
