--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,61 +1,51 @@
-/**
- * For more details on how to configure Wrangler, refer to:
- * https://developers.cloudflare.com/workers/wrangler/configuration/
- */
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "afonso",
-  "compatibility_date": "2025-03-20",
-  "pages_build_output_dir": "./dist",
+  "name": "afonso-dev",
+  "compatibility_date": "2025-08-01",
+  "main": "./.output/server/index.mjs",
+  "assets": {
+    "binding": "ASSETS",
+    "directory": "./.output/public/",
+  },
   "observability": {
     "enabled": true,
   },
-  /**
-   * Smart Placement
-   * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
-   */
-  // "placement": { "mode": "smart" },
-
-  /**
-   * Bindings
-   * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
-   * databases, object storage, AI inference, real-time communication and more.
-   * https://developers.cloudflare.com/workers/runtime-apis/bindings/
-   */
-
-  /**
-   * Environment Variables
-   * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
-   */
-  // "vars": { "MY_VARIABLE": "production_value" },
+  "vars": {
+    "NUXT_PUBLIC_NODE_ENV": "development",
+    "NUXT_PUBLIC_HOST": "http://localhost:8787",
+  },
   "env": {
     "preview": {
       "vars": {
         "NUXT_PUBLIC_NODE_ENV": "preview",
-        "NUXT_PUBLIC_HOST": "https://preview.afonso.pages.dev",
+        "NUXT_PUBLIC_HOST": "https://preview.afonso.dev",
       },
+      "routes": [
+        {
+          "pattern": "preview.afonso.dev",
+          "custom_domain": true,
+        },
+        {
+          "pattern": "preview.afonsodemori.com",
+          "custom_domain": true,
+        },
+      ],
     },
     "production": {
       "vars": {
         "NUXT_PUBLIC_NODE_ENV": "production",
         "NUXT_PUBLIC_HOST": "https://afonso.dev",
       },
+      "routes": [
+        {
+          "pattern": "afonso.dev",
+          "custom_domain": true,
+        },
+        {
+          "pattern": "afonsodemori.com",
+          "custom_domain": true,
+        },
+      ],
     },
   },
-  /**
-   * Note: Use secrets to store sensitive data.
-   * https://developers.cloudflare.com/workers/configuration/secrets/
-   */
-
-  /**
-   * Static Assets
-   * https://developers.cloudflare.com/workers/static-assets/binding/
-   */
-  // "assets": { "directory": "./public/", "binding": "ASSETS" },
-
-  /**
-   * Service Bindings (communicate between multiple Workers)
-   * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
-   */
-  // "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
 }
