--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,35 @@
-name: CI/CD Pipeline
+name: Deploy to Cloudflare
 
 on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Choose an environment to deploy to: <preview|production>'
+        description: 'Choose an environment to deploy to'
         required: true
-        default: 'preview'
-  push:
-    branches:
-      - main
-    paths-ignore:
-      - '**/*.md'
+        type: choice
+        options:
+          - preview
+          - production
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    environment: ${{ github.event.inputs.environment }}
     permissions:
       contents: read
       deployments: write
+    env:
+      NODE_ENV: ${{ github.event.inputs.environment }}
+      API_BASE_URL: ${{ vars.API_BASE_URL }}
+      WEBSITE_HOST: ${{ vars.WEBSITE_HOST }}
+      TURNSTILE_KEY: ${{ secrets.TURNSTILE_KEY }}
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm ci --include=dev
 
       - name: Install pandoc
         run: sudo apt-get update && sudo apt-get install -y pandoc
@@ -34,26 +37,25 @@ jobs:
       - name: Build Resumes
         run: npm run build:resume
 
-      - name: Build Project
-        run: npm run build
+      - name: Generate static site
+        run: npx nuxt generate
 
-      # Deploy: Production (manual or push)
+      # Deploy to Production (main branch or manual production trigger)
       - name: Deploy to Cloudflare (Production)
-        if: ${{ github.event_name == 'push' || github.event.inputs.environment == 'production' }}
+        if: ${{ github.event.inputs.environment == 'production' }}
         uses: cloudflare/wrangler-action@v3.14.1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: deploy --env=production --name=afonso-dev
+          command: deploy
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
 
-      # Deploy: Preview (manual only)
+      # Deploy to Preview (manual workflow_dispatch only)
       - name: Deploy to Cloudflare (Preview)
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'preview' }}
+        if: ${{ github.event.inputs.environment == 'preview' }}
         uses: cloudflare/wrangler-action@v3.14.1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          # TODO: Deploying in a different project due to a bug
-          command: deploy --env=preview --name=preview-afonso-dev
+          command: versions upload --preview-alias=preview
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
