chore: Enable workers.dev URL

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,6 +8,7 @@
   },
   "observability": { "enabled": true },
   "compatibility_flags": ["nodejs_compat"],
+  "workers_dev": true,
   "preview_urls": true,
   "routes": [
     {
